fix: overflow scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,7 +73,7 @@
 
 @layer base {
   * {
-    @apply overflow-x-hidden border-border;
+    @apply border-border;
   }
   body {
     @apply overflow-x-hidden bg-background text-foreground;
